--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,7 @@ h1#page-title {
 
 .event-card {
   background-color: #fff;
-  border-left: 5px solid #007acc;
+  border-left: 5px solid #148424;
   padding: 1rem;
   margin-bottom: 1rem;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
@@ -121,7 +121,7 @@ h1#page-title {
   background-color: #fff;
   color: #333;
   appearance: none;
-  background-image: url('data:image/svg+xml;utf8,<svg fill="%23007acc" height="20" viewBox="0 0 24 24" width="20" xmlns="http://www.w3.org/2000/svg"><path d="M7 10l5 5 5-5z"/></svg>');
+  background-image: url('data:image/svg+xml;utf8,<svg fill="%148424" height="20" viewBox="0 0 24 24" width="20" xmlns="http://www.w3.org/2000/svg"><path d="M7 10l5 5 5-5z"/></svg>');
   background-repeat: no-repeat;
   background-position: right 0.6rem center;
   background-size: 1rem;
@@ -156,7 +156,7 @@ h1#page-title {
 .menu-toggle svg {
   width: 100%;
   height: 100%;
-  fill: #007acc;
+  fill: #148424;
 }
 
 .nav-links {
@@ -169,7 +169,7 @@ h1#page-title {
 
 .nav-links li a {
   text-decoration: none;
-  color: #007acc;
+  color: #148424;
   font-weight: bold;
   padding: 0.5rem 1rem;
   border-radius: 5px;
@@ -178,13 +178,13 @@ h1#page-title {
 
 .nav-links li a:hover,
 .nav-links li a:focus {
-  background-color: #007acc;
+  background-color: #148424;
   color: white;
   outline: none;
 }
 
 .nav-links li a.active {
-  background-color: #007acc;
+  background-color: #148424;
   color: white;
   font-weight: bold;
   border-bottom: 2px solid white;
