--- a/Styles_budget.css
+++ b/Styles_budget.css
@@ -40,7 +40,7 @@ h1#page-title {
 .menu-toggle svg {
   width: 100%;
   height: 100%;
-  fill: #007acc;
+  fill: #148424;
 }
 
 .nav-links {
@@ -53,7 +53,7 @@ h1#page-title {
 
 .nav-links li a {
   text-decoration: none;
-  color: #007acc;
+  color: #148424;
   font-weight: bold;
   padding: 0.5rem 1rem;
   border-radius: 5px;
@@ -61,7 +61,7 @@ h1#page-title {
 }
 
 .nav-links li a:hover {
-  background-color: #007acc;
+  background-color: #148424;
   color: white;
 }
 
@@ -242,7 +242,7 @@ details summary {
   background-color: #fff;
   color: #333;
   appearance: none;
-  background-image: url('data:image/svg+xml;utf8,<svg fill="%23007acc" height="20" viewBox="0 0 24 24" width="20" xmlns="http://www.w3.org/2000/svg"><path d="M7 10l5 5 5-5z"/></svg>');
+  background-image: url('data:image/svg+xml;utf8,<svg fill="%148424" height="20" viewBox="0 0 24 24" width="20" xmlns="http://www.w3.org/2000/svg"><path d="M7 10l5 5 5-5z"/></svg>');
   background-repeat: no-repeat;
   background-position: right 0.6rem center;
   background-size: 1rem;
@@ -299,7 +299,7 @@ details summary {
 } 
 
 .nav-links li a.active {
-  background-color: #007acc;
+  background-color: #148424;
   color: white;
   font-weight: bold;
   border-bottom: 2px solid white;
