--- a/Styles_budget.css
+++ b/Styles_budget.css
@@ -319,3 +319,10 @@ details summary {
   object-fit: contain;
 }
 
+.nav-logo {
+  height: 40px;
+  object-fit: contain;
+  margin-right: auto;
+  margin-left: 0.5rem;
+}
+
