--- a/Styles_budget.css
+++ b/Styles_budget.css
@@ -242,7 +242,7 @@ details summary {
   background-color: #fff;
   color: #333;
   appearance: none;
-  background-image: url('data:image/svg+xml;utf8,<svg fill="%148424" height="20" viewBox="0 0 24 24" width="20" xmlns="http://www.w3.org/2000/svg"><path d="M7 10l5 5 5-5z"/></svg>');
+  background-image: url('data:image/svg+xml;utf8,<svg fill="%23148424" height="20" viewBox="0 0 24 24" width="20" xmlns="http://www.w3.org/2000/svg"><path d="M7 10l5 5 5-5z"/></svg>');
   background-repeat: no-repeat;
   background-position: right 0.6rem center;
   background-size: 1rem;
