--- a/Styles_budget.css
+++ b/Styles_budget.css
@@ -151,7 +151,7 @@ h1#page-title {
   text-align: left;
   font-weight: bold;
   padding: 0.5rem;
-  background: #d1efd8;
+  background: #148424;
   border-bottom: 1px solid #ccc;
 }
 
