--- a/Styles_budget.css
+++ b/Styles_budget.css
@@ -152,6 +152,7 @@ h1#page-title {
   font-weight: bold;
   padding: 0.5rem;
   background: #148424;
+  color: white;
   border-bottom: 1px solid #ccc;
 }
 
