--- a/styles.css
+++ b/styles.css
@@ -502,3 +502,19 @@ h1#page-title {
 .event-content {
   padding: 0.6rem 0 0 0;
 }
+
+.event-title {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  cursor: pointer;
+}
+
+.summary-icon {
+  display: inline-block;
+  transition: transform 0.3s ease;
+}
+
+details[open] .summary-icon {
+  transform: rotate(90deg);
+}
