--- a/styles.css
+++ b/styles.css
@@ -529,11 +529,9 @@ details[open] .summary-icon {
 }
 
 .school-filter-wrapper {
-  flex-basis: 100%;
-  display: flex;
-  align-items: center;
-  gap: 1.5rem;
-  margin-top: 0.5rem;
+  display: block;
+  width: 100%;
+  margin-top: 1rem;
 }
 
 #school-filter {
