--- a/styles.css
+++ b/styles.css
@@ -641,16 +641,8 @@ details[open] .summary-icon {
   }
 }
 /* === Varannan månad randig === */
-.event-group {
-  padding: 0; /* Ingen extra padding */
-  margin-bottom: 3rem;
-}
-
 .event-group:nth-of-type(odd) {
   background-color: #DFF5E3;
-  border-radius: 6px;
-}
-
-.event-card {
-  margin: 0.8rem 0; /* Behåll luft mellan korten */
+  padding: 0rem;
+  margin-bottom: 3.5rem;
 }
