--- a/styles.css
+++ b/styles.css
@@ -640,9 +640,10 @@ details[open] .summary-icon {
     font-size: 0.95rem;
   }
 }
-/* === Varannan månad randig === */
-.event-group:nth-of-type(odd) {
-  background-color: #DFF5E3;
-  padding: 1rem;
+
+
+.event-group: {
   margin-bottom: 3.5rem;
 }
+
+
